--- a/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:46o6yv0x,iv:xVmz9dH+7FgxdDY8Aer+wUJbR3/WJGYaR+oidF97js4=,tag:muunWu6KWJw+xGrdeJLRfg==,type:str]
-ansible_user: ENC[AES256_GCM,data:WFEFhzah,iv:jSqTWl2AhIljhhGs9Y3oDdtmGb+iSRxRUYreD9v6taM=,tag:CkeJ9KEd9qAQXR5VzKEx0w==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:XL6yvvpw,iv:H9+FZq938Yh+E96eriZ/QOwZDIDnJ1WhL4I144hiY3I=,tag:g9voUfmgvRhWyC5NDyB5Lw==,type:str]
+kind: ENC[AES256_GCM,data:blKoqXIA,iv:YKfozM6SGquKijOpdolyhdGj6JvNX4GxMHWUWPPQQoU=,tag:/A7TlBsrodQ7gK5Jon+tyA==,type:str]
+ansible_user: ENC[AES256_GCM,data:SfsZPm0F,iv:6TC4+PL9dem3b0Mi86q4fEdlGhkMszo/cN7WSSrNnq0=,tag:RvbWTUObn1KVydFhaa5U5A==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:mtnv7jg0,iv:uT/X9g5e5NvV1QsqowegUlESTj5HsNRnrsPodO/KNz0=,tag:XjPIzKkM60FVwKM+VvnC2A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKalN3ZnBlUjBRa1c4alkv
-            ZGw3ZTFoQy9DZnRydTNJVTBYeEh4M3hiVldRClhCRkVzWlIyczRzdTRMclRMWTIv
-            L3Fja09pSFhpYmhtL044UUZKRGlNQW8KLS0tIGdHUXhBNi9MbFpPazZPa0hmOFRD
-            Y1dqOXhHcWQvV0sybUR2ZDhhRTRST3cKlVvE97DXD5mIAXP2OG88EStoTV72TLMz
-            2QqNwTxviLDVFKd2SvSpUDCmv7J46WNMdyKHrJ2ME4l7QktpDEICfw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpQmsxZVpKTFk4YklMYjNY
+            WDQrVlZWdVErM25rSXVVWDVkNlJpUCtPZm1JCjlYU3BYbjlZcUtER09DL21Ncm9B
+            OVVqbkxBTENRTS9PSGZURmNQQS9HQXcKLS0tIFU4L1ZPUnBXRkJIYS9VZi85WGZw
+            YVdNVHpBZ21QT25JVkFoQmJ6Qlc3NFkKmD+kOpUAb+LQeHobQsaEjIlNWIV0cMGB
+            uM5W9QEeIF8CfJJY17mpqbeXOCMTwaNfx1BNUobqfuZ3qY7BoHjQwg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-28T21:23:39Z"
-    mac: ENC[AES256_GCM,data:heQD40RTRfzQ7JGZWKhPhE/pFsp2q35jHN3B9fgwrGWk1kPxetbFovpqiWbBPp0SbNnMpVNKG9PKft3UrcHpG6wPZtKvTM77oTiJEU/9VcMlDYaIqXLXu8uRVeMzwqrvSGhAihBYQ9ywqYPUzOAMsJHdempHV69kqHrNuQRN1eM=,iv:JGsj2IRajlA8stSJWhW0824VZEzVOdA6EKlF7E7X2XA=,tag:GoeK6VIB1V4sWHI0UAG7MQ==,type:str]
+    lastmodified: "2023-01-29T20:19:43Z"
+    mac: ENC[AES256_GCM,data:+NlKpqHEJxK/3FyGEltxo9AK3DuREM+/3fMb7iN7TbMG18/Ew7ND2ygaah9QFqaojxwCmloXvftFmX0SsxKNFF9wnOi1D+ykqDR8PCXOjGeHU/9mAHIaRoQovO3FNRFfaEQmd38L2HNbR2z3MeLv1ULzfOo+gl6HC6HTCPF5t0A=,iv:CPcWcTkKkzOdQhcTZZa360xyJVQdZdALtVWe+KEMlR0=,tag:InMH/sQk7SS2offTbVHuuA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
