--- a/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:mgC9u+kI,iv:WGm8hkw0haLdZRNysu+FKYjVPRAlhFHGIgIDL8pi7UU=,tag:FFXgaxLDIg5s6+ASisrPXQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:rKgEm0A2,iv:CRYrEhZMZ2Gwb4ESoV2iwQ1g3WfaktRpBjk+QqOSCLI=,tag:aws5gBpc5kMHkCULFJwUsQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:qrapmXuO,iv:4lPb1HaLaDlDX95BJIGqgXvhCJBG7Zs1w4uY80QIOik=,tag:anH/zvnUzOg6+g8H9Yc4gg==,type:str]
+kind: ENC[AES256_GCM,data:8iJaeG0J,iv:frAgoffzHadRAKrGCHNr74LwYddxIQ9y6FfFJJrKRNQ=,tag:paOersbfHdrFJUeivbPykQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:79n5zAbG,iv:jpAnRAsW5pDy4CVOPwsHsa9AH7mkcOAg7yZBem7EQfI=,tag:aVrHahsMzJiFUS2UzB1byQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:9sXSuCE9,iv:9MNiQ8GPo75eCvwyU3yPyTYR3RABbvqPnATMUcdmWxI=,tag:jLpnYqLMRuDTd54P4j4btw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1NDV1SWJVdXBsTlNHb2kv
-            d1luM2xXZXIxWFRQR21hWkdESUp4emFoOWdBCkNCRDNvcWVwM0E5eFNrTDVkTllG
-            V0pIMzUweG9SSFRzaHhKT2ovM0E3WVkKLS0tIGxPSVFoQmpFVVh1NklxamphSTk2
-            MkdaTSs5cWhjdk5uU0FnSG1ZNTFUdGsKW9nFr5DeZ+YsIM2vVnk7ZdHw13AoNoli
-            5mXs6JdgeUiBKZmvhvLU3cD4v3hNNJbm23FYZRUibRA2Nc+npUIrqA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWaGhsS3EzY2xYUXE3dkwz
+            bkcvQWRwRnV5YmwxN2ZCRnNHdkdNaytxRFZBCmVVRWRsaE1LdFU3K0JGdVZwUjhx
+            QVpFbTI1VVoydW5vUkYwV3p0ZytyTEUKLS0tIGk3QmZDSWcrSm9la0IwSDlBamph
+            eUp4c3A2L1IxRVEzcjFhUXk0M0NBcGcKPdveEgvhzRwBJNmeXhVy7yUVlSUofo8v
+            OVsy+1GVpl7RQwrzrP5RGK1hIjOpmUCQdS/4IZaWRfBydkBeyIaEMQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-28T21:23:39Z"
-    mac: ENC[AES256_GCM,data:OeTPjSxuv+wBF/3pe8OG5D6OrZAVQzq2L376V5BUjftgNB6OV2pTpWf8d2IQirW6biWzqpMUVo8i8EMs0kkCwiv4L4htbRt6/4cvotIz3ZiQ+wlheHVD0TlfexSLEqLf0Be5TNfuEt2peIOKxLfZ3F5KuAzbXhMXJN82xIUd0N4=,iv:dEBRP3blSM/tf+KbrVE2zGOcfoFZ64AsYWoNtNvzJVo=,tag:ANXcGfSa6k6Jg8ggAtXiKQ==,type:str]
+    lastmodified: "2023-01-29T20:19:43Z"
+    mac: ENC[AES256_GCM,data:D2KnHcrFSGZ3/Va0sHUdYZgA7W7yvaX9E5NepSazCEWYuOqK2AVXC2iD3e/5lSb6/dbsXJIih2eCZb90CK9ZaJUF0LsLS06OvIhJRMO0x+YHgMkcV3QuNbFYnuwGsHXUQwVjW0dlnFMyB1fkxsVhrltFu4nzXXQf9qwqR9oqyls=,iv:o7wyYJurNZ+uJ9iGvEqR5/E8UdTo5S5QzExQ1b76LrU=,tag:w0GEfZtzkupX3wY+xjRhZA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
