--- a/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:JTmMNMFv,iv:gbNc6a2l1kAbrsPNL7dovwRnxf3MA8SLqWzfVug4Q0w=,tag:xTgLT92E4wAELznVpvi6Og==,type:str]
-ansible_user: ENC[AES256_GCM,data:bzKYjZEa,iv:/lkWcbewSFuEigf5hceT6HlBeNbbQAunNkJQ68EK/EA=,tag:lDC8s55b4zQ0JaObYF0hKA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:yDV25aR6,iv:FGZNfHfyiDq+1YTVn4wtwPI++ROpCzraXLr19yU4r+8=,tag:+W3BJl+aysflglx/obTFxQ==,type:str]
+kind: ENC[AES256_GCM,data:TOp7Kzll,iv:lnJ3a7DCU5OeVCGN+Z1BBWyq41BFGbVlsC1jzgtH6+c=,tag:76+9f+74nno2XQTgu3y3eg==,type:str]
+ansible_user: ENC[AES256_GCM,data:sHOBRdYI,iv:kbLRXKl25za9rQmgPeW7xWKdeywfRGqmeNkQqm6rKoQ=,tag:HlIF28yhjlCo4GASa5gd/Q==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:GwVUVPWO,iv:QZUB4ZotA6GsxjxT1AUHuPAV58RNhV0bk+hPUBzGUcg=,tag:1K3ClT4wkDWlY/4zloVrmA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmZGIwY1kwd2w1d2pMMnpM
-            cEplOFR3MHk2UFZBZ29EaFZLaHFHbVNaakhzCjY2K3VpdVk4NjJnZUN5b0xTWjU2
-            a1ZLZ3pmUEVkcXczWitIaUgzdG9zckEKLS0tIDQvaWgxVEw2WDVrWktTTXdFQlBk
-            dzQ3bEdUZG0zTFdESEhLSHh1di9OWXMKM2LMaDt9K64GJrO3+2l75UtenjVCOgyK
-            HyMse48JOkwHAHc97vcV3rWp35xibV0IraoT37gyK4TRwKX9KaDBKQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTY1FucURPb0NHVmFiTG5Z
+            V3FOTytwTzVKR0RSS2cwT2NJa2V3dzJ5TUNrCmtwRjlwUG9XMjVKYlVMY1ZWK1o5
+            RjRjdUdGVStBdVhJZHVWQkJ1K3dvaVUKLS0tIE5BcEgwemVzTjRFV2dheVJHbWRx
+            RVRhTGN4VUxydWgwWkxjMkJHdkJZYlEKBGDNUSikTkMf6EoF+O0uLW4OeN0FibYR
+            Wn08323NfVCh/e1ZI2bZjw7/F1aU/nvZB0GtVhkVdb9ha/PTqB+R3Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-28T21:23:39Z"
-    mac: ENC[AES256_GCM,data:Q3CVuBvTCOQaQ+gmqa0KlE78PqGG6sBB43ls/d2cxzC8RI4QgqNrhiIUenz88o0zngRqKUhnfsUd79iagnFc1Ez1dM1d5t5rnTDUGVSmJE2UxqoaouGxugCaTZncP9srPL/BkTB7X/WHrVOWSeASbpMSpcWrMFsC9BJ32CcqXUo=,iv:dpzwKmq3PNveJeXGj7k6VGa7roFdtWTsiWw2aTxGr2E=,tag:pvvg9NLIOZpF6uFLUN/Nbw==,type:str]
+    lastmodified: "2023-01-29T20:19:43Z"
+    mac: ENC[AES256_GCM,data:aWmrqGJVKz6tA7xPj+cWdQDMcL1ZnfSWqXCWaKzf6cg1BftFT3Lba4wT81OHYnVmdKUACPh1gfZStiFD6Z8SfUKuoUAYfZLvYMBvFologJ3+ICEuEkZjtdJ8hTfPJUYyddzs71M0mTScCy+P8Iz7u81ao6GzNO6QVf1sLDkbhto=,iv:ymsHng6O1qPhKNhDRLpMZfXWFC0x+98u27tt6vvv+y0=,tag:ilZCYI2V4VGbNTPJV5qnaw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
