--- a/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:lZDo8aPn,iv:OU6QuoQiGDDmLsc6cLN5ZWUkVcKBTo0OofWOM+yMYEo=,tag:30/TdeFjZrykB0gsebMU2g==,type:str]
-ansible_user: ENC[AES256_GCM,data:0aRhMs8J,iv:5+ToL+0zFJqJw7bdyX9duoghRuIg4WzTPAWsLenCo08=,tag:eiBIA6Br9zxrFRhSwfafNg==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:Nky+HBx1,iv:Auf2C739ksV8wzumfgkiwOAmJ6g2KAc/tj2iQtOR+x4=,tag:SUzLva6IJ1CM09zF2sxW3A==,type:str]
+kind: ENC[AES256_GCM,data:dXV8MqFl,iv:LWkfH6JRZ+05wgET73A4Cg+pRLt6jg0FUwK/9RrtowU=,tag:eoEke/cq69AYAhT1c3OwGw==,type:str]
+ansible_user: ENC[AES256_GCM,data:AN2h/zRk,iv:jAZkR8xdVKMlp12rx+DcpNIfPvq4AZbs9J62p2bqFro=,tag:HkgQC4rmu5TGRj1rnqSSVw==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:juGcr+80,iv:gEsrj8SGzFIh7AOa2/Hi6W1WFqtr9YM98mL+2n3WlUc=,tag:HJDNStbT9LXZSpI/O6IYCA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpOE9pZkhmNmZyNEM4TXRG
-            UkhFdCtJbDBmc1V4blo3ZmN0cVpqYXpGS1FrCjZNS01WWmZlTDZibVhmd3RIZk52
-            cjdEczJNMXdrY1NzN0Z0TmVZTUF5V00KLS0tIGpYSnBlekN0U21mL3FGTjNFZldY
-            d2lOTjRjMnh6RWJLUWFTbDJxc2VnOWMKo191yvugljqt8MeCLgOWSY+SHo1+IUlX
-            xNxKsXbSseCFZOwhs+H3xOWovf3XUr9ldC9hUGuErClOomagWv5gdQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwMHFqYVYwK0gwTTgxTllS
+            NDZUZG1NVmNEUGZoOGM4WjFyQzNTRWNtK0RrCldDT3crM2liMUdDM25MaGg1cGtH
+            MTcwa3VrMjV3RXBkSU93OWp5NVJ1MzgKLS0tIGJNUXRNblNvcHlnRE54Rnc0OHJZ
+            d1FJR2laMmp3NEZ3WGhwTmdlZDJUVTAKSkW0ZrneOige1IYlRnPaWsqA6bk9buSK
+            WYw3vb8c/xrYXVdd9gLOw8i38W28/tFmS22A6D+lBMBEZ2udGdmK1A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-28T21:23:39Z"
-    mac: ENC[AES256_GCM,data:ZNUoggT8FdrWfxAIXWoMgQoDxW7wYtHeKNNH8iSmCEBnP7CL3FpGFtSY+2Orwa02tyaVarctcENzvcA1V8yQoeMKQ0aMri9Y7kvjWaYZIjTM8YUlT1G7i1BI3R6hmraoINL/J7i/h0rkSjO9Fix7E+S/D9N8/Kbo1ehcdvIP5bk=,iv:PE90CoRRQmGDaUu87THexSzc5YUuEe/psymJrgsTd5k=,tag:vOeYmM5GbnC4LJf90QpBMQ==,type:str]
+    lastmodified: "2023-01-29T20:19:43Z"
+    mac: ENC[AES256_GCM,data:K7w3r/CTAyIGPG9p6drFncjMvQtTY7mSiTGZhHroYZQHtZvtd8OhLU0GM1bSxhOs6gdNE5vfpvWKGJjpLad+mAlDe3bulTFKHglewdgIkFa94JwITFKrA701ehhSUaNHH7p9dRS9v4ulzF8cyvBUKPVjAV1jkXRsbu4QS7Z6vvI=,iv:INPAUoOllv1zZmCU+eK7GoXWaloUjsXvMAMZQyMy0CM=,tag:Lm8FyYVXXFBl56B+eh6AjQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
