--- a/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:l4K1CRYB,iv:M5jfnEROyJkbm//0+rQngGklWU1CbpT7J5/Yxc0R9BQ=,tag:hbqWAD6uGstlZbkTW1X9LA==,type:str]
-ansible_user: ENC[AES256_GCM,data:h2TVgwCH,iv:Uog0lNs1JGCZy5h0Flh5ioU7nKaMo3oDAW6qvIAkEz4=,tag:TVCdqoYnFV4kSORibqO6vA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:rVLtxQBV,iv:/S54tVdSxQ00c1GhpPnliIJ1JQd8QBqUACXpLESJRGc=,tag:6jbkg1dvzL6iBcsV0AVu8A==,type:str]
+kind: ENC[AES256_GCM,data:x8QCgrrF,iv:a+z57LYCXN7o5DN9STWKL5DDsKpkYOfM5ZShCyR1kvw=,tag:j+knNdIV6ujVtkj/QU72mA==,type:str]
+ansible_user: ENC[AES256_GCM,data:nK9SPaJD,iv:z0Yu9i651ySxzjoEMdr2b6IgHc7/qYsYfY/Hjx8DNUg=,tag:0SLV4paJMI5K1Nv7SJD9nQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:/r7CfO7y,iv:mg7SLYLPSvM+SENmOHomH490Lo5IHviGzfe+/fNsRSg=,tag:kscUMTeDzlTvGsHruqAnwQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1d09IMXpDQkYyU0NucUt4
-            MlNVdnRBcUtiQmdQRWFTU2hBa1cvUVEzSWhJCjdTVjY3QW5kb1U1aWVsVXh1TktT
-            SUd6NGkwK3BMWHNSZVhhN01TM3Z3VTQKLS0tIFNTbkVraUFOUGs1Z3Jvak82UHFO
-            SUN1VlBoWnhhOW9NSFhXQ2NEM1hsTVEKQGRACajoGDLopEo111kA0BTzsha5Z8LG
-            /TDJIG0Gm/5/ps7DAdPPI64SlTwAYjvHEgrk1B+gEFtzMYNFTI3Hug==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0TWlhYVhFdkYrb3RVbjg1
+            ZlEzc3V6eFg4RUlzMGNUbUVWTlJKSFdmSWtjCnJjRHBPRnFjNVFzVnJmcHVPWktS
+            dVpiTnRvd3ZyRVdBMzJ2SWovcHNJVEEKLS0tIERNVXlET3NiZFNLemRVVXZqU3B6
+            VkN0NytubHlTS2haTlNPbG81NjgyMXcKtTrsAulzU09ZwwDF+oyNIx1D+qtqqt/i
+            qZeeO4UitsrBS+Evkn9TfpvGKGYYXuOKZ5l9Y4qkQWOhXVuDmZr7Lw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-28T21:23:39Z"
-    mac: ENC[AES256_GCM,data:MsciCKND1kDS2VHnz0u7MxYw3N3ZbBx752UmR9bnAC+aYW1dhis/w/yTQgHasvUrdLFJTw0S1OyyP/yVXPHCR20j5Vexo1PVDk2KEXr/cUGKww+XEPn6EUAVgqwGxJxr3YZfxdIyihCOwLQVP9ymUhQPA9ais3C/woSuwvojzKc=,iv:vSH+yuX8GOVCX4zNQFVnAF/O5dJcAEPKDD+3Qf+bZTo=,tag:FxTONJLZsATiKp+Pt8GDEw==,type:str]
+    lastmodified: "2023-01-29T20:19:43Z"
+    mac: ENC[AES256_GCM,data:dmnyhARZMevWe9h5C8nW7BjMJLyCcKLePPuUa1yCa+EnR2uqHOMh5xK0aByqLw1NJeRvqBFtnCkEMQ7w9RTmGCMVjCSxpP2JNAiuDQLuWfqn+8o13mD08f1t7r1utnMdLfIlKwApaEJTIv0sTdbqdj0jtMAqax1SjNJzVBtQSIY=,iv:IJ3zqtCCVfcrH08MgODzK/n9xUPuozskKeoInI163Kw=,tag:kq0/7NJlr/CKo6fL/lssZA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
