Another deploy :rocket:

--- a/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:dXV8MqFl,iv:LWkfH6JRZ+05wgET73A4Cg+pRLt6jg0FUwK/9RrtowU=,tag:eoEke/cq69AYAhT1c3OwGw==,type:str]
-ansible_user: ENC[AES256_GCM,data:AN2h/zRk,iv:jAZkR8xdVKMlp12rx+DcpNIfPvq4AZbs9J62p2bqFro=,tag:HkgQC4rmu5TGRj1rnqSSVw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:juGcr+80,iv:gEsrj8SGzFIh7AOa2/Hi6W1WFqtr9YM98mL+2n3WlUc=,tag:HJDNStbT9LXZSpI/O6IYCA==,type:str]
+kind: ENC[AES256_GCM,data:PP/fUY2I,iv:JAAPjBH7rC3Qxon3B8IPeVKyJKo4RK/fPkULlEZ/LB8=,tag:XsoZ92yRj6VGYsUlTK3nZQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:dUjvbHi/,iv:z/v7tOSiY74+eUYiNpxkvzI0BH5DwEom3MGCflfg3BY=,tag:/HMZmg2ZNcrc0Bd/y6xU1Q==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:zGyIjEbQ,iv:m8po7pTVGpmhaZyVuaWvF9pEWT7V5MbxVgCvMH6hqPc=,tag:zZ6Sem3cQmjJamr9IBh0Jw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwMHFqYVYwK0gwTTgxTllS
-            NDZUZG1NVmNEUGZoOGM4WjFyQzNTRWNtK0RrCldDT3crM2liMUdDM25MaGg1cGtH
-            MTcwa3VrMjV3RXBkSU93OWp5NVJ1MzgKLS0tIGJNUXRNblNvcHlnRE54Rnc0OHJZ
-            d1FJR2laMmp3NEZ3WGhwTmdlZDJUVTAKSkW0ZrneOige1IYlRnPaWsqA6bk9buSK
-            WYw3vb8c/xrYXVdd9gLOw8i38W28/tFmS22A6D+lBMBEZ2udGdmK1A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCUVRmQUVxNHNHeGhiTVl2
+            OFB6MWdrcU1tNEliUXVudGQreVJnM29ZeDFzCi9PS2R4alpULzR3dDZ2NlJKdnhF
+            RVBNZ25NWS9kT3prU1Q1NGtCbjhTSTgKLS0tIC9GaEVXYzBlYUp6eG94TFVpK0NI
+            czZmMG8xcTJYb09oak9BTUlMaW14MlUKHR6FwN/ZDDpOUoP0haJaFkk5WSVVot4r
+            CjW22mMkjqwHrYKQgJ4f0HzUaM5y+agUlbpb8u4TIBy2T3KdFm9q8g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T20:19:43Z"
-    mac: ENC[AES256_GCM,data:K7w3r/CTAyIGPG9p6drFncjMvQtTY7mSiTGZhHroYZQHtZvtd8OhLU0GM1bSxhOs6gdNE5vfpvWKGJjpLad+mAlDe3bulTFKHglewdgIkFa94JwITFKrA701ehhSUaNHH7p9dRS9v4ulzF8cyvBUKPVjAV1jkXRsbu4QS7Z6vvI=,iv:INPAUoOllv1zZmCU+eK7GoXWaloUjsXvMAMZQyMy0CM=,tag:Lm8FyYVXXFBl56B+eh6AjQ==,type:str]
+    lastmodified: "2023-01-29T20:56:54Z"
+    mac: ENC[AES256_GCM,data:ruuoN0+cKUddZ4clNsENXmV+GEW6UD20L+G8vpn5d4EnsbmXxSe96WRIne/f9cQbZ9COf+xNcQF3xX+L7cgSGm39kzsp9tTmnFYG5SIXEc80R3y0H0U6GPzvWftDZpMv9dpKEezvS98rou4/viWuc+RP7jMJx4CG2tJr7/kbez8=,iv:ftmWsDR9QNP5d1MH2gV70tLbxvqSARQDRLQ8pgWzp3w=,tag:RoC7EslWjinabmbbyj91Rg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
