--- a/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:blKoqXIA,iv:YKfozM6SGquKijOpdolyhdGj6JvNX4GxMHWUWPPQQoU=,tag:/A7TlBsrodQ7gK5Jon+tyA==,type:str]
-ansible_user: ENC[AES256_GCM,data:SfsZPm0F,iv:6TC4+PL9dem3b0Mi86q4fEdlGhkMszo/cN7WSSrNnq0=,tag:RvbWTUObn1KVydFhaa5U5A==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:mtnv7jg0,iv:uT/X9g5e5NvV1QsqowegUlESTj5HsNRnrsPodO/KNz0=,tag:XjPIzKkM60FVwKM+VvnC2A==,type:str]
+kind: ENC[AES256_GCM,data:yNLI5gY3,iv:O3/4s9GBJh7P/5Ud9zd/vcY8Qk3f3RLsiwJ7UrJhduY=,tag:NsEmp+qeKKDj/h/pJEzlxw==,type:str]
+ansible_user: ENC[AES256_GCM,data:waxEhi4x,iv:Wt2sbh2SoQBRfpZjjGH/tBI/eBNOEnhoFjX8oNpGDx8=,tag:fgWm4xiFz8VNyJhue7V+SA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:Gtd3BF5l,iv:hJ1C/s5zwQiX3ZgKHIme1vB+kv6ZrVPPmeOC6V0WDsE=,tag:feR2wkeIFvh0RikxBENHXQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpQmsxZVpKTFk4YklMYjNY
-            WDQrVlZWdVErM25rSXVVWDVkNlJpUCtPZm1JCjlYU3BYbjlZcUtER09DL21Ncm9B
-            OVVqbkxBTENRTS9PSGZURmNQQS9HQXcKLS0tIFU4L1ZPUnBXRkJIYS9VZi85WGZw
-            YVdNVHpBZ21QT25JVkFoQmJ6Qlc3NFkKmD+kOpUAb+LQeHobQsaEjIlNWIV0cMGB
-            uM5W9QEeIF8CfJJY17mpqbeXOCMTwaNfx1BNUobqfuZ3qY7BoHjQwg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGeFgxLytxREMxd0h3ZFdR
+            T1dNSVNpNGpyVkFnMG0vSU5ocDFNSXBhOEZJCmlLT2lzeUhOMUNhdVBiN3c0aXJk
+            OHRRbGNxQ3FJYUlodU45M3JNWmJEYk0KLS0tIGlXbnc4Y05KRzA0N1Y2STh6MFBU
+            SnlwU0l4VTliVE5lb1A5bGdLakJkaTAK4MDJVOGq62/Ur/Z2Hz610W1U5J3GBQUz
+            IEgrLIXj7E+haL0Igfi0ZgP5j2MTdWOV3wqkh/KNFk5Yip096chAgg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T20:19:43Z"
-    mac: ENC[AES256_GCM,data:+NlKpqHEJxK/3FyGEltxo9AK3DuREM+/3fMb7iN7TbMG18/Ew7ND2ygaah9QFqaojxwCmloXvftFmX0SsxKNFF9wnOi1D+ykqDR8PCXOjGeHU/9mAHIaRoQovO3FNRFfaEQmd38L2HNbR2z3MeLv1ULzfOo+gl6HC6HTCPF5t0A=,iv:CPcWcTkKkzOdQhcTZZa360xyJVQdZdALtVWe+KEMlR0=,tag:InMH/sQk7SS2offTbVHuuA==,type:str]
+    lastmodified: "2023-01-29T20:56:54Z"
+    mac: ENC[AES256_GCM,data:xaScHncxe25XYpEH1YSAGjNo7lBUoWU9Y8VfTQc/AzyPiFb43jxv2+n0YnC7Z/Ac3dai68MQSOu3stEp0j9lKDN2qCrdpQNkQTvuE2L4t7FoYd14Gp2zOweGLfojeCPUp9tOVYLuOFEwRvPEqCk6Xy6XGF1/8Fvr0MazDdvTUEg=,iv:EpaWwSFFEjW79xNg7sUcpDZ3vTVWf46li+we2Q11rJI=,tag:SpO7oAEkl3EfyuspkNkckA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
