--- a/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:x8QCgrrF,iv:a+z57LYCXN7o5DN9STWKL5DDsKpkYOfM5ZShCyR1kvw=,tag:j+knNdIV6ujVtkj/QU72mA==,type:str]
-ansible_user: ENC[AES256_GCM,data:nK9SPaJD,iv:z0Yu9i651ySxzjoEMdr2b6IgHc7/qYsYfY/Hjx8DNUg=,tag:0SLV4paJMI5K1Nv7SJD9nQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:/r7CfO7y,iv:mg7SLYLPSvM+SENmOHomH490Lo5IHviGzfe+/fNsRSg=,tag:kscUMTeDzlTvGsHruqAnwQ==,type:str]
+kind: ENC[AES256_GCM,data:s9aczEx/,iv:DACoz4Yc83AC1YCHjIiKap47Fj2mfra0OuIcjfzeTYM=,tag:OstB+6ar3yfdMlHDB+bbjw==,type:str]
+ansible_user: ENC[AES256_GCM,data:SUILfUKU,iv:e76n6tSkqPskVPoU8Pjn6j4LJ92AHuFOv0F10N7Vnmk=,tag:mbg/07qec36671eWrbtknw==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:caRx+lKM,iv:L6i+Zq1ATeh+6sHlDc0N3k3Qd9hW5/2w9zmmoXmvOIk=,tag:uAf+17pf8TpwaH2D3G/PFw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0TWlhYVhFdkYrb3RVbjg1
-            ZlEzc3V6eFg4RUlzMGNUbUVWTlJKSFdmSWtjCnJjRHBPRnFjNVFzVnJmcHVPWktS
-            dVpiTnRvd3ZyRVdBMzJ2SWovcHNJVEEKLS0tIERNVXlET3NiZFNLemRVVXZqU3B6
-            VkN0NytubHlTS2haTlNPbG81NjgyMXcKtTrsAulzU09ZwwDF+oyNIx1D+qtqqt/i
-            qZeeO4UitsrBS+Evkn9TfpvGKGYYXuOKZ5l9Y4qkQWOhXVuDmZr7Lw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHc00za0xMdEpGeDdvYS9y
+            L2pqQmFRVVlJRyt0T1JQZVRGTEdRdXU5RVEwCmg1MWRHOVg2cjlzTmh4MHBJQWp3
+            M09iUHJGK2htQnk2bkVSNjVUQXNXODgKLS0tIDlRVlhkaGxDbHhXbk9SeCtOSHJV
+            blhVZm80RGlWRjU4NDc0NmQrSmdNWTQK9G2Nlq1VI2Tgdc4OLpjobDODvXTYeI2V
+            gPMxzFgOKO4uwmWDTZqP3tWhreIJG1O36X1QgjKGnUWJe3d+D5ckUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T20:19:43Z"
-    mac: ENC[AES256_GCM,data:dmnyhARZMevWe9h5C8nW7BjMJLyCcKLePPuUa1yCa+EnR2uqHOMh5xK0aByqLw1NJeRvqBFtnCkEMQ7w9RTmGCMVjCSxpP2JNAiuDQLuWfqn+8o13mD08f1t7r1utnMdLfIlKwApaEJTIv0sTdbqdj0jtMAqax1SjNJzVBtQSIY=,iv:IJ3zqtCCVfcrH08MgODzK/n9xUPuozskKeoInI163Kw=,tag:kq0/7NJlr/CKo6fL/lssZA==,type:str]
+    lastmodified: "2023-01-29T20:56:54Z"
+    mac: ENC[AES256_GCM,data:LMBeVFCzuglSFv5Uk30npXkpt6gWupjqPKBu++Ud8KDLzVLuShjBk4G2vOPdKe4Vn4jMJ33g8W823A3Blvt7YXjRXf4LczEDtjY7heGwAiEUzd2SQlmtBjzb3QJoegInDQfRnGlHZBx10BAcpIZoQ107cZnUNdHEbI4PscKY0oQ=,iv:aUoqEbx/nKrzNrKgH2z/G8Neq9paMGETRxV2E5K0DIk=,tag:o1AXd4rdLNambgeMc47zlw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
