--- a/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:8iJaeG0J,iv:frAgoffzHadRAKrGCHNr74LwYddxIQ9y6FfFJJrKRNQ=,tag:paOersbfHdrFJUeivbPykQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:79n5zAbG,iv:jpAnRAsW5pDy4CVOPwsHsa9AH7mkcOAg7yZBem7EQfI=,tag:aVrHahsMzJiFUS2UzB1byQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:9sXSuCE9,iv:9MNiQ8GPo75eCvwyU3yPyTYR3RABbvqPnATMUcdmWxI=,tag:jLpnYqLMRuDTd54P4j4btw==,type:str]
+kind: ENC[AES256_GCM,data:nQhVWBxJ,iv:VGRjsXYN8yRBkvIUfHJG6oof/RREJ8qsFZ+YPslT98Q=,tag:RUrO10Cj1zvPehK6igJ+rQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:0pxygADK,iv:fC4l7VPGs4uLrr4kDrW0KeX5i/FCxDQMMc3PFH1oL8g=,tag:jxm5wdTZc1Ldn4ar1K8Rrg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:2eP3NvR2,iv:5SqaMKUWlvxbyOllge7SfnW0HZAvgZcrniSDF9deWWg=,tag:Je4QRhusYAODJsIKBvw8lA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWaGhsS3EzY2xYUXE3dkwz
-            bkcvQWRwRnV5YmwxN2ZCRnNHdkdNaytxRFZBCmVVRWRsaE1LdFU3K0JGdVZwUjhx
-            QVpFbTI1VVoydW5vUkYwV3p0ZytyTEUKLS0tIGk3QmZDSWcrSm9la0IwSDlBamph
-            eUp4c3A2L1IxRVEzcjFhUXk0M0NBcGcKPdveEgvhzRwBJNmeXhVy7yUVlSUofo8v
-            OVsy+1GVpl7RQwrzrP5RGK1hIjOpmUCQdS/4IZaWRfBydkBeyIaEMQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYQkVZR0VaanNGaW4rN2RO
+            b1Jvb04vKzZLNzRPTmVTRzMzTFJvSkRYend3CmJFaDgxSnYzM2NhMDVLQzEwMWVS
+            bmpacm1oSE1MOGVNcmNGTkVWRjY0bXcKLS0tIFNlbk1HR3REd3Babmlrd3cxYjFr
+            UWxNTTY4UHVONXlKbXZXbm5oNjdvcmsKnQk7lJtkBlpL64PtjDcwHVdtnkCNCu+3
+            6BDqoq/ROkmtbVmhcy8SmfzkzpcyjtM5p7926drBOPyi/i4drFf7nw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T20:19:43Z"
-    mac: ENC[AES256_GCM,data:D2KnHcrFSGZ3/Va0sHUdYZgA7W7yvaX9E5NepSazCEWYuOqK2AVXC2iD3e/5lSb6/dbsXJIih2eCZb90CK9ZaJUF0LsLS06OvIhJRMO0x+YHgMkcV3QuNbFYnuwGsHXUQwVjW0dlnFMyB1fkxsVhrltFu4nzXXQf9qwqR9oqyls=,iv:o7wyYJurNZ+uJ9iGvEqR5/E8UdTo5S5QzExQ1b76LrU=,tag:w0GEfZtzkupX3wY+xjRhZA==,type:str]
+    lastmodified: "2023-01-29T20:56:54Z"
+    mac: ENC[AES256_GCM,data:mQhX8vJBC6m2I4pdBU+dI6ClctSQKa/Mre/7Ia7/x4wCPq9No3ng05+XvG7gpdCweL3rOzlYQkuiRv/SUvKSBYHa08Zf1rmxLlD9XLjM2H+udyGrhW1GRCVACWpJs0FFY1aXyvRD8+DmKl6m0hKrmXWftp1hLdLaE9zFdQGtM2A=,iv:zNyu5Tdqk5xYVby87rN4TeBNWt+a6Rhx/zD71oZB9Iw=,tag:HOuqe7SNg0LQ6a4kPfphQw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
