--- a/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:TOp7Kzll,iv:lnJ3a7DCU5OeVCGN+Z1BBWyq41BFGbVlsC1jzgtH6+c=,tag:76+9f+74nno2XQTgu3y3eg==,type:str]
-ansible_user: ENC[AES256_GCM,data:sHOBRdYI,iv:kbLRXKl25za9rQmgPeW7xWKdeywfRGqmeNkQqm6rKoQ=,tag:HlIF28yhjlCo4GASa5gd/Q==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:GwVUVPWO,iv:QZUB4ZotA6GsxjxT1AUHuPAV58RNhV0bk+hPUBzGUcg=,tag:1K3ClT4wkDWlY/4zloVrmA==,type:str]
+kind: ENC[AES256_GCM,data:dhEhco0U,iv:3mBDcxiqOiMqcEPO0/FPNUo8nVcsjM/e0dIgxsO6qfc=,tag:6qIOWVRqFBWHI06gXi0KVw==,type:str]
+ansible_user: ENC[AES256_GCM,data:a5C72ESR,iv:qNhPyOzhwBe+CXhCzZrCqdUSKCiyZv2G9zHBJHHZ9vw=,tag:HFWrN1jaVqn8XCDiAhJK6w==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:acha9wNQ,iv:gWVwjVAnw3PF3pAOHZhnmRAm2MwMsm9CNHcEUvffq+M=,tag:Dld9zzmX74tqvX7XUWCzQQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTY1FucURPb0NHVmFiTG5Z
-            V3FOTytwTzVKR0RSS2cwT2NJa2V3dzJ5TUNrCmtwRjlwUG9XMjVKYlVMY1ZWK1o5
-            RjRjdUdGVStBdVhJZHVWQkJ1K3dvaVUKLS0tIE5BcEgwemVzTjRFV2dheVJHbWRx
-            RVRhTGN4VUxydWgwWkxjMkJHdkJZYlEKBGDNUSikTkMf6EoF+O0uLW4OeN0FibYR
-            Wn08323NfVCh/e1ZI2bZjw7/F1aU/nvZB0GtVhkVdb9ha/PTqB+R3Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArczZnaXloY3V2cUEyWE5x
+            RFdqUFVYbkdqcmpPcHcrNmtLbkZIbGFNQnhRClpSRVI4SWJuUmR4ZldmZHc3dEJD
+            WXhxMXExOGMrR1dhNkNhaW1MYTFaR00KLS0tIFRsNm5tTGJaQzkzT3B4Ym85bm00
+            enJJRHk2dmViRmZHZUc3NzFYL00wWlEKzdDp6cyJRuFQ2G8c1GJuOWPOk1oE34ey
+            dtXEdxCWBXGcJnG+Tem8EMmenIDGyZx1RKvpLyMeYazyAhNTkYcXpQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T20:19:43Z"
-    mac: ENC[AES256_GCM,data:aWmrqGJVKz6tA7xPj+cWdQDMcL1ZnfSWqXCWaKzf6cg1BftFT3Lba4wT81OHYnVmdKUACPh1gfZStiFD6Z8SfUKuoUAYfZLvYMBvFologJ3+ICEuEkZjtdJ8hTfPJUYyddzs71M0mTScCy+P8Iz7u81ao6GzNO6QVf1sLDkbhto=,iv:ymsHng6O1qPhKNhDRLpMZfXWFC0x+98u27tt6vvv+y0=,tag:ilZCYI2V4VGbNTPJV5qnaw==,type:str]
+    lastmodified: "2023-01-29T20:56:54Z"
+    mac: ENC[AES256_GCM,data:4TzZzFefoGsfo6/nMWQNfWrlAoj8vAZqo3qQyaEGyYUwcngqHVptskClIF28Z6iyDho8JmIUfVDjEIUmMsb7zUEk3jWoNEeN/ltZJfTCYCWSFu6LEdVsLQN/9KkKN6u8+WkF85MY4Hr+IPSHXxXCwx9ccrgVh3iPPy06rNezuFk=,iv:hMN8PKwijCPkguSxVFaK1BLD6XsTcF+PeFaAuVtbhsA=,tag:bccehE/aotKia2ObhNpBLw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
