--- a/kubernetes/apps/home-automation/home-assistant/app/kustomization.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/kustomization.yaml
@@ -5,8 +5,6 @@ namespace: home-automation
 generatorOptions:
   disableNameSuffixHash: true
 resources:
+  - secrets.sops.yaml
+  - pvc.yaml
   - helmrelease.yaml
-secretGenerator:
-  - name: home-assistant-secret
-    files:
-      - values.yaml=values.sops.yaml
