--- a/kubernetes/apps/home-automation/home-assistant/app/kustomization.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/kustomization.yaml
@@ -5,6 +5,6 @@ namespace: home-automation
 generatorOptions:
   disableNameSuffixHash: true
 resources:
-  - secrets.sops.yaml
+  - secret.sops.yaml
   - pvc.yaml
   - helmrelease.yaml
