--- a/kubernetes/apps/home-automation/home-assistant/app/secret.sops.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/secret.sops.yaml
@@ -4,10 +4,9 @@ metadata:
     name: home-assistant-secret
     namespace: home-automation
 stringData:
-    postgresql-password: ENC[AES256_GCM,data:fIm0r/cdoNtRgkMB,iv:BuXdQrVZmXMmDub0YXvawOHWAnUPrNeDH00JMIz4od8=,tag:STRQsyRQnSKP67gV0sj3DQ==,type:str]
-    password: ENC[AES256_GCM,data:lMmskDS9ge0BhMbW,iv:MjezEE1tyzQE1bLuGONlZXUobiOjTX7SywxACFZrVJc=,tag:FztLGHN++8Il2be61HoU4Q==,type:str]
-    hass_server: ENC[AES256_GCM,data:7WVMeAFqP9fqHlir31BELjVHGfl5,iv:tRTMM4u6ZGUw0/h/+8fOHtqXLRrldBnpfIEzrIx8VUw=,tag:gysX1feqsC62dHXlnA8+Xw==,type:str]
-    hass_token: ENC[AES256_GCM,data:RB1A730zXTWUNUEf,iv:NksdJqHj5yRPtWFyNJgWxAFABWW9iw8SmS7LvCBaDXQ=,tag:Xi51LEyFoWy1KDspOI51vg==,type:str]
+    postgresql-password: ENC[AES256_GCM,data:5qB88DN55mQICovz,iv:FZiRKxdylALJM9nSARXQN+s+0TIOyTxTjhS1Xb2Iu80=,tag:Ic7LJftBgjj2fmO7BmvmtQ==,type:str]
+    password: ENC[AES256_GCM,data:9rij/CrJvOebAfgL,iv:oywCGw7dD0fUZMdQ1oh5hkdOJGQRCBTyOhK1zf3iZNM=,tag:L2KLN9FMY1NAsezrs59ufQ==,type:str]
+    hass_token: ENC[AES256_GCM,data:kvmW2lkjFHYCQUfg,iv:ZuNfeK5n7Hp4YSyQd1gKkEA7GC2IG6W6nEXTrobtqao=,tag:bbkK2fGRWFwBbaXeGaiUhQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +16,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwb0hIRTJvYlNMQlE0QlRY
-            TVh3VTVqOHF1V3hmbVBKV0ZsRUFuLzlhUW4wCnYvNjk1QTFZUVBsQkNEMzVLK0Vt
-            dGFvdFpNWTkzM3c3c0NpWXZmVEpHQ0kKLS0tIENLY1dLWUEyaE1DU3hCU2JMNjl1
-            N2ZWT0RjYlZMcWp5NlY3anJmaS9jZmsKMw50GGF2MdR1sXnuYbYmwTyb8Z/F50nn
-            /k6d6VE0Vdjx18NGrg7lT066ksyGx5fZbduXAPatQe3ImkpPxcwhoA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjcVE2SHN3bGRhd3N0VCtO
+            Ky92ZXdlbGVCMk1TNUdnK25pZ3JudHpPcEJZCkJuODc3dElUSFFSaDNCL2ZicjRF
+            VzJCKy9hYzVaVVVWQldWWW1hbktBRjAKLS0tIDBpOUtQNGJMK3NtSmFXMUw2YzdG
+            SXczM2dtdy8rbHhHdmxoRVVLVk51cHMKSxYuXC85PXO1OftnfRXOd6u/6p4D04Yb
+            rZBlhzuV/D1CGGdpEin8pwpeHv0TqruqZLnW8gO/l6sjbi55s75v+g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-02T21:31:19Z"
-    mac: ENC[AES256_GCM,data:KOEOvw0AnpW9A/wA6J4aSP1G4YkMsA0Ptu15HSJ/3D5w4Nuy8Ddm59V8ZoCiuUhpiwpcmKrgeZOzMD4WAFezzPFXaYf6GuElBeWpMzkoUOqhcDAH2z46JBBxyB/24+aCo07UsWOmEOoNYZJQO7mBMrgJ2PAYQ4Uyc1is/tRLH+M=,iv:z5xiJKe4pz7qQf2qzIXlIdcKpznFEOwOfMIR4Wxi6ds=,tag:fcUNLlRorL5zJ1315miiGA==,type:str]
+    lastmodified: "2023-02-02T22:39:32Z"
+    mac: ENC[AES256_GCM,data:7sO+YH5l9KVLEng+cSS1ZG+9VPyLUq9GpMk35NMGUh1+wGOeb+8/8e0PfSwEiwVSUHDZX4XttAkBmgIZ+AhWbMIMCB4o26BtIAvuwBGpaqSNWXE7/OYE7TBaFoHqRpFFvzo7M1TwqlyD88d8URQ2e5jk2beng2gmBMEC/WP11z0=,iv:ylk+XlD7YZFUPQJtj/3ZahOEfGWeiKlRuj6PVoVg8VY=,tag:HcHf5HkwVgEzETq4lmAUpw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
