fix secret for postgres

--- a/kubernetes/apps/home-automation/home-assistant/app/secret.sops.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/secret.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: home-assistant-secret
     namespace: home-automation
 stringData:
-    postgresql-password: ENC[AES256_GCM,data:5qB88DN55mQICovz,iv:FZiRKxdylALJM9nSARXQN+s+0TIOyTxTjhS1Xb2Iu80=,tag:Ic7LJftBgjj2fmO7BmvmtQ==,type:str]
+    postgres-password: ENC[AES256_GCM,data:dyAfL6rT+LhSC0HM,iv:2t2HOud9dh+WRz/MYpjhhCqHrAeJsyTVzsh3v+u0oFQ=,tag:PFlVaUcPosTH1KXDPmpmog==,type:str]
     password: ENC[AES256_GCM,data:9rij/CrJvOebAfgL,iv:oywCGw7dD0fUZMdQ1oh5hkdOJGQRCBTyOhK1zf3iZNM=,tag:L2KLN9FMY1NAsezrs59ufQ==,type:str]
     hass_token: ENC[AES256_GCM,data:kvmW2lkjFHYCQUfg,iv:ZuNfeK5n7Hp4YSyQd1gKkEA7GC2IG6W6nEXTrobtqao=,tag:bbkK2fGRWFwBbaXeGaiUhQ==,type:str]
 sops:
@@ -22,8 +22,8 @@ sops:
             SXczM2dtdy8rbHhHdmxoRVVLVk51cHMKSxYuXC85PXO1OftnfRXOd6u/6p4D04Yb
             rZBlhzuV/D1CGGdpEin8pwpeHv0TqruqZLnW8gO/l6sjbi55s75v+g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-02T22:39:32Z"
-    mac: ENC[AES256_GCM,data:7sO+YH5l9KVLEng+cSS1ZG+9VPyLUq9GpMk35NMGUh1+wGOeb+8/8e0PfSwEiwVSUHDZX4XttAkBmgIZ+AhWbMIMCB4o26BtIAvuwBGpaqSNWXE7/OYE7TBaFoHqRpFFvzo7M1TwqlyD88d8URQ2e5jk2beng2gmBMEC/WP11z0=,iv:ylk+XlD7YZFUPQJtj/3ZahOEfGWeiKlRuj6PVoVg8VY=,tag:HcHf5HkwVgEzETq4lmAUpw==,type:str]
+    lastmodified: "2023-02-02T22:55:49Z"
+    mac: ENC[AES256_GCM,data:aJsB3mQkV+C+qv8HBPtBBzziWLFQa/Unxe30T7rUsgID9OqXCWsSmdGpMSYMuWl5956AS2/IQYOV1xzSFsIUZmrFxUmwpzXmlJY9MBLWKhy8MRxYTSh0WzCx/lpdaGEwPytpQSI26emGfHKcOf3EGoIgGZCD7wp8jg+S1S49Uo8=,iv:9hLOysLYxIRbLxGN1q+8+vMyCbUOv6BHb4iQWOY3z7Y=,tag:N3zBCYA4Bk4+Wq9rpxcBOg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
