--- a/kubernetes/apps/home-automation/kustomization.yaml
+++ b/kubernetes/apps/home-automation/kustomization.yaml
@@ -4,3 +4,5 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./home-assistant/ks.yaml
+  - ./mosquitto/ks.yaml
+  - ./zwavejs2mqtt/ks.yaml
