new cluster config

--- a/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:yNLI5gY3,iv:O3/4s9GBJh7P/5Ud9zd/vcY8Qk3f3RLsiwJ7UrJhduY=,tag:NsEmp+qeKKDj/h/pJEzlxw==,type:str]
-ansible_user: ENC[AES256_GCM,data:waxEhi4x,iv:Wt2sbh2SoQBRfpZjjGH/tBI/eBNOEnhoFjX8oNpGDx8=,tag:fgWm4xiFz8VNyJhue7V+SA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:Gtd3BF5l,iv:hJ1C/s5zwQiX3ZgKHIme1vB+kv6ZrVPPmeOC6V0WDsE=,tag:feR2wkeIFvh0RikxBENHXQ==,type:str]
+kind: ENC[AES256_GCM,data:adP6j4FE,iv:qw79tdUBDHxVwueM4OFh+Mlvi10g8ogaT5TRXrB1hTI=,tag:FQcocanVk98ILuBeZVQgyg==,type:str]
+ansible_user: ENC[AES256_GCM,data:vue2ibNb,iv:AjHQ8BxJlFXh2xAI08DZG62ci6VHoUxTr3IDwGgKwQ0=,tag:QqElMO+U9Gs1y+QzVTifUA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:m0AWZsek,iv:hzuTvzPeVARQHpbpYgm7Wergqh1pAtf5ntXyKl/Uqns=,tag:cxKIYNvO1kdfGvcjM8jjrA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGeFgxLytxREMxd0h3ZFdR
-            T1dNSVNpNGpyVkFnMG0vSU5ocDFNSXBhOEZJCmlLT2lzeUhOMUNhdVBiN3c0aXJk
-            OHRRbGNxQ3FJYUlodU45M3JNWmJEYk0KLS0tIGlXbnc4Y05KRzA0N1Y2STh6MFBU
-            SnlwU0l4VTliVE5lb1A5bGdLakJkaTAK4MDJVOGq62/Ur/Z2Hz610W1U5J3GBQUz
-            IEgrLIXj7E+haL0Igfi0ZgP5j2MTdWOV3wqkh/KNFk5Yip096chAgg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrWVR3RVh6VzNhU0F3RGhC
+            Qmg3VEh1YmUxK2FPY0ZGZXNleVhXN09xLzM4CllNYWszUjVZN1JzQ05MR29Xakpt
+            a245S1F5YVhwNUJMNXlkN1pRY0JFaTQKLS0tIFgzQUlQempzN1R1OGt4QnFqUjBN
+            YVMza1dxRHdVYm5JWndsZkx1QXdpbkEKrHDMHF6BRgiHUCDnollXjmsyYYUl9Ft7
+            s4DMK3xJtKCcHDCYc1oRsgYrwfug81OZblkpxrL+VOgyO1OmreAlcg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T20:56:54Z"
-    mac: ENC[AES256_GCM,data:xaScHncxe25XYpEH1YSAGjNo7lBUoWU9Y8VfTQc/AzyPiFb43jxv2+n0YnC7Z/Ac3dai68MQSOu3stEp0j9lKDN2qCrdpQNkQTvuE2L4t7FoYd14Gp2zOweGLfojeCPUp9tOVYLuOFEwRvPEqCk6Xy6XGF1/8Fvr0MazDdvTUEg=,iv:EpaWwSFFEjW79xNg7sUcpDZ3vTVWf46li+we2Q11rJI=,tag:SpO7oAEkl3EfyuspkNkckA==,type:str]
+    lastmodified: "2023-02-05T12:31:37Z"
+    mac: ENC[AES256_GCM,data:NpUve4jzcT2f5CGitf8Pj2bhSIg12mM3iKv0nJmoMdvrYzDfQ/YrGKM6Hy+Dh0Ba5mk7CzrINZp2byjpj6zRA5JwA3Y0Qr9xjEH+2YzBUIvfZcjJ6GM9GhwIuTOyZwMZqNPV8upCFtLAlhVO2IHaPN57bLrv7y/g7PN8TLzSqmU=,iv:y4yr7FodK6FuXDmVxgwn1+VvgDBu5XDFEB9jPVOLaYQ=,tag:Zib3GOBge+DoD729sgiONA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
