--- a/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:dhEhco0U,iv:3mBDcxiqOiMqcEPO0/FPNUo8nVcsjM/e0dIgxsO6qfc=,tag:6qIOWVRqFBWHI06gXi0KVw==,type:str]
-ansible_user: ENC[AES256_GCM,data:a5C72ESR,iv:qNhPyOzhwBe+CXhCzZrCqdUSKCiyZv2G9zHBJHHZ9vw=,tag:HFWrN1jaVqn8XCDiAhJK6w==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:acha9wNQ,iv:gWVwjVAnw3PF3pAOHZhnmRAm2MwMsm9CNHcEUvffq+M=,tag:Dld9zzmX74tqvX7XUWCzQQ==,type:str]
+kind: ENC[AES256_GCM,data:mJci/+i6,iv:bEYjbhTFFR0blCkJJaHgvf27IuRTT3fCH0auLNjpJr8=,tag:1sDvFB/pqvCb5+evw2pDTw==,type:str]
+ansible_user: ENC[AES256_GCM,data:bksekHbb,iv:uZ7MbsVYOnMnRvx5vCUaO9ax4FnwWXBRd/nPubXINJ8=,tag:Ne8LlfCUxIthRPvxSrEWtA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:lpcbD3Kj,iv:VLc+w2n9JpS5JMrb1dRBNZIEC+aCU/PXhidItFCTgFc=,tag:NM4xONQHEf5I94hDb2Hb4w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArczZnaXloY3V2cUEyWE5x
-            RFdqUFVYbkdqcmpPcHcrNmtLbkZIbGFNQnhRClpSRVI4SWJuUmR4ZldmZHc3dEJD
-            WXhxMXExOGMrR1dhNkNhaW1MYTFaR00KLS0tIFRsNm5tTGJaQzkzT3B4Ym85bm00
-            enJJRHk2dmViRmZHZUc3NzFYL00wWlEKzdDp6cyJRuFQ2G8c1GJuOWPOk1oE34ey
-            dtXEdxCWBXGcJnG+Tem8EMmenIDGyZx1RKvpLyMeYazyAhNTkYcXpQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWSHBVWXl5STlsZzRDOFI2
+            UXEzVENMb0xKajVJNXFmL05CeEM4QVJDa3lJCjJvYmxzamFoL2szKzRNWnVFeWs1
+            Y1ZuOERRd2w3K0piVUc3aS9OTHhrczgKLS0tIE5SN0lWSmswR2daNzJoaXF3N0Vk
+            TXdlQ2RxdVlzWlRwZlA1SDB0LzQ3M1EKnQIhHhsjqlWmQJlvvgxtpZjvy+YWiz8w
+            JqSdgQpS7Htywi+SRWLXCGQyVCWiJQdzek1flkAJ9IfTeqKulhD5Xg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T20:56:54Z"
-    mac: ENC[AES256_GCM,data:4TzZzFefoGsfo6/nMWQNfWrlAoj8vAZqo3qQyaEGyYUwcngqHVptskClIF28Z6iyDho8JmIUfVDjEIUmMsb7zUEk3jWoNEeN/ltZJfTCYCWSFu6LEdVsLQN/9KkKN6u8+WkF85MY4Hr+IPSHXxXCwx9ccrgVh3iPPy06rNezuFk=,iv:hMN8PKwijCPkguSxVFaK1BLD6XsTcF+PeFaAuVtbhsA=,tag:bccehE/aotKia2ObhNpBLw==,type:str]
+    lastmodified: "2023-02-05T12:31:37Z"
+    mac: ENC[AES256_GCM,data:OHNlKceGNvREfr366vOtlsuK+VootVY1VnjDrAwpzp+NEvIYcZCMnlPjAeO/rjaIC69IP2Y1AXv6PaSnCcMb0KW/E/K6xDZgTWnnjatbHJLvUcOhP1F/cI4BH+S9Si52QvFwu4BNDwfZ2iHuU7m2Wrzuu01Lo91RxXc1trlrVVY=,iv:dlHaQqQkWctNtVqOKLao3If/qFuwl2nYb5wrutFhO84=,tag:by3m09+4lTsT58xxz5FR/w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
