--- a/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:s9aczEx/,iv:DACoz4Yc83AC1YCHjIiKap47Fj2mfra0OuIcjfzeTYM=,tag:OstB+6ar3yfdMlHDB+bbjw==,type:str]
-ansible_user: ENC[AES256_GCM,data:SUILfUKU,iv:e76n6tSkqPskVPoU8Pjn6j4LJ92AHuFOv0F10N7Vnmk=,tag:mbg/07qec36671eWrbtknw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:caRx+lKM,iv:L6i+Zq1ATeh+6sHlDc0N3k3Qd9hW5/2w9zmmoXmvOIk=,tag:uAf+17pf8TpwaH2D3G/PFw==,type:str]
+kind: ENC[AES256_GCM,data:tbIaVaXU,iv:Ydhu38tJhqvOEcft6K40Y7YyKREErXyCgfDeupZwb/g=,tag:KmktLriq/xGDQpRduhqAEQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:c4LecA3p,iv:g+U6gsx/izCG5Guj6EeOuyBU1gmnP5v601OUqWsIDxg=,tag:o08qVQqTJDs8tC6UqU9Q7g==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:lkaNggZS,iv:twVuC2689avT5isHi8/Gh0Cul41gSONZlY+gkvqBKFc=,tag:ORQ6LBwX4IvY/XBFxomsJQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHc00za0xMdEpGeDdvYS9y
-            L2pqQmFRVVlJRyt0T1JQZVRGTEdRdXU5RVEwCmg1MWRHOVg2cjlzTmh4MHBJQWp3
-            M09iUHJGK2htQnk2bkVSNjVUQXNXODgKLS0tIDlRVlhkaGxDbHhXbk9SeCtOSHJV
-            blhVZm80RGlWRjU4NDc0NmQrSmdNWTQK9G2Nlq1VI2Tgdc4OLpjobDODvXTYeI2V
-            gPMxzFgOKO4uwmWDTZqP3tWhreIJG1O36X1QgjKGnUWJe3d+D5ckUA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYcjBCZjMvRU5jb2JwUEFn
+            S24wWVliYndHVnRROTdOVC84TXRaWC9yZ1JZCnNPdnhpRE10Q2llZjhpTWU2bkE5
+            U0JKRVhpeW1Od3JWTkR3eUVVMWdhcTgKLS0tIDNkUktiNzVqN1ljc1d1eHZ2UklL
+            RkxtVWJoNyt5K3JES2dQb0l4amQzZVUKlr2Y8Q1IuDQX8OvlhFHW+DqgMPQpEy43
+            ZkGY7jYSdBYDKda5q6xNN/PQLGGCyv75DcAkD0cXCtX/C1T9N8ymVw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T20:56:54Z"
-    mac: ENC[AES256_GCM,data:LMBeVFCzuglSFv5Uk30npXkpt6gWupjqPKBu++Ud8KDLzVLuShjBk4G2vOPdKe4Vn4jMJ33g8W823A3Blvt7YXjRXf4LczEDtjY7heGwAiEUzd2SQlmtBjzb3QJoegInDQfRnGlHZBx10BAcpIZoQ107cZnUNdHEbI4PscKY0oQ=,iv:aUoqEbx/nKrzNrKgH2z/G8Neq9paMGETRxV2E5K0DIk=,tag:o1AXd4rdLNambgeMc47zlw==,type:str]
+    lastmodified: "2023-02-05T12:31:37Z"
+    mac: ENC[AES256_GCM,data:Z2O0hEbnulRS4UN9cmsLmEohYU4yXLSHZdnmRi/V9Cdz4CprwIXlzSmv2cXkpyewxR8mrOArJ1JnVH0egx797pJbctu+ffgKS3h0aC/qwJNwYNsd1iduE43Qc6aNYar9cOES9dSQAdpWBxJz++//iNgFkYgNwRKysmEP/fm7Sa0=,iv:S24G3GtdgQYIVlCOq5fJWtKvjfvGk9dGLX19DkUhB6M=,tag:VWEuPRQ2q8jK4f2BHTvEIw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
