--- a/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:nQhVWBxJ,iv:VGRjsXYN8yRBkvIUfHJG6oof/RREJ8qsFZ+YPslT98Q=,tag:RUrO10Cj1zvPehK6igJ+rQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:0pxygADK,iv:fC4l7VPGs4uLrr4kDrW0KeX5i/FCxDQMMc3PFH1oL8g=,tag:jxm5wdTZc1Ldn4ar1K8Rrg==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:2eP3NvR2,iv:5SqaMKUWlvxbyOllge7SfnW0HZAvgZcrniSDF9deWWg=,tag:Je4QRhusYAODJsIKBvw8lA==,type:str]
+kind: ENC[AES256_GCM,data:+ZslM8A4,iv:0mAPWJoubT3Hd2Mrx9hX271qvVWZ9AiwXejqtfTQ0oU=,tag:2blDFlfY9pU+EgVTWQ/uJw==,type:str]
+ansible_user: ENC[AES256_GCM,data:9qJJypPL,iv:EqlVfoeR1YyPu8i8LGDsVEOOWbOubSLDXxr+Brk4Vzk=,tag:FHHyHHajsSKaRYY5USEZMQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:L9drf/GJ,iv:Nsc3d7uk4r1z3OsT2bmqhAqsY8vjALwUy1ItXzs2qHM=,tag:aMHcSHnd4AtS7hiaXY6VCg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYQkVZR0VaanNGaW4rN2RO
-            b1Jvb04vKzZLNzRPTmVTRzMzTFJvSkRYend3CmJFaDgxSnYzM2NhMDVLQzEwMWVS
-            bmpacm1oSE1MOGVNcmNGTkVWRjY0bXcKLS0tIFNlbk1HR3REd3Babmlrd3cxYjFr
-            UWxNTTY4UHVONXlKbXZXbm5oNjdvcmsKnQk7lJtkBlpL64PtjDcwHVdtnkCNCu+3
-            6BDqoq/ROkmtbVmhcy8SmfzkzpcyjtM5p7926drBOPyi/i4drFf7nw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWdGJPQUU0VEtXdXYwaC9t
+            czdidXJnRWRHN2VPNTRMd3NBRnp4eFBwOTNrCnFrcTMzbmMwWWhCOTR0NTlQQTRP
+            ZFF5SkU3WmNtSkl2NGEzbHVnK2hnR1EKLS0tIDdpL2J6anJIeHlldENubHNucHFK
+            OVMzVDVBOFFBVE1Vbjk0Z1BUdHFDY3cKQXwvZtFQH5YNKjbaQue5cC6xXPC7A8Vk
+            ZcTPLN9M+Mlqk3MQysZKr72/ffE3Tqfl9QhuiTP+q4zs5l/zg3+bAg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T20:56:54Z"
-    mac: ENC[AES256_GCM,data:mQhX8vJBC6m2I4pdBU+dI6ClctSQKa/Mre/7Ia7/x4wCPq9No3ng05+XvG7gpdCweL3rOzlYQkuiRv/SUvKSBYHa08Zf1rmxLlD9XLjM2H+udyGrhW1GRCVACWpJs0FFY1aXyvRD8+DmKl6m0hKrmXWftp1hLdLaE9zFdQGtM2A=,iv:zNyu5Tdqk5xYVby87rN4TeBNWt+a6Rhx/zD71oZB9Iw=,tag:HOuqe7SNg0LQ6a4kPfphQw==,type:str]
+    lastmodified: "2023-02-05T12:31:37Z"
+    mac: ENC[AES256_GCM,data:XvgE+wRoFq+AU9QMxCBSMaNYeDenMuBAtYecpmyoYTmF9FLCrdQWPzRs/UrCwMKoKDKZFr2vpp54Ba7a+hk5Dh4sGSkAwzAO7BSZ6/PKqkjcmvp0fanQPZz5rkiPzb+FYlTiqs/oOqB9Sv4btmNASE91XTbIlu0YXwo/fXxSSz0=,iv:qhpJCq/E7qVFX8cxJfQvPBjWPAjS70YVFa5qtwb0IgE=,tag:t1IPIg/2ZOEAF7bIWakrGQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
